--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <title>mood shop</title>
   </head>
-
-  <body>
-      <p> hello world </p>
+    <body>
+  <header class='page-header'>
+    <h4>The Mood Shop</h4>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Cart</a></li>
+      </ul>
+    </nav>
+  </header>
   </body>
 </html>
