added nav and header css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>mood shop</title>
+    <link href = "styles.css" rel = 'stylesheet'
   </head>
     <body>
   <header class='page-header'>
