--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
   <head>
     <title>mood shop</title>
-    <link href = "styles.css" rel = 'stylesheet'
+    <link href = "styles.css" rel = 'stylesheet'>
   </head>
-    <body>
-  <header class='page-header'>
-    <h2>The Mood Shop</h2>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Cart</a></li>
-      </ul>
-    </nav>
-  </header>
-  </body>
+
+<body>
+    <header class='page-header'>
+        <h2>The Mood Shop</h2>
+        <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Cart</a></li>
+        </ul>
+        </nav>
+    </header>
+    <div class='items' id='items'> 
+    </div>
+<script src="script.js" type="module"></script>
+</body>
 </html>
