--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </ul>
         </nav>
     </header>
-    <div class='items' id='items'> 
-    </div>
+    <main class='items' id='items'></main>
+    <footer>
+    </footer>
 <script src="script.js" type="module"></script>
 </body>
 </html>
