connected buttons to cart

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     </header>
     <main class='items' id='items'></main>
     <footer>
+      <div id='cart-qty'>
+        <!--cart quantity-->
+      </div>
+      <ul id='item-list'>
+        <!--stuff in cart-->
+      </ul>
+      <div id='cart-total'>
+        <!--total cost-->
+      </div>
     </footer>
 <script src="script.js" type="module"></script>
 </body>
